--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>hey!! subdomain takeover vuln.. reported to team </h1>
+<!-- index.html -->
+<html>
+  <head><title>Pwned by Naitik</title></head>
+  <body style="font-family:sans-serif; text-align:center;">
+    <h1>Subdomain Takeover Successful 😎</h1>
+    <p>This subdomain is vulnerable and Reported to team</p>
+  </body>
+</html>
